# pt_appsec_ml_joleal

./: .env.example  Makefile  README.md  pyproject.toml
docs/arquitectura/: 00-brief.md  01-requisitos.md  02-supuestos.md  03-diagramas.md  04-adrs.md  05-datos.md
docs/autenticacion/: autenticacion.md
docs/diagramas/: diagramas_pt_appsec.drawio
scripts/: connect_to_auth0.py  oauth_login.py  ollama_agent_base.py  openai_base_agent.py  openai_owasp_agent.py  openai_owasp_single_agent.py  openai_structured_output_agent.py
scripts/agent_prompts/: A02_CF.md  A03_Injection.md
src/: agent.py  app.py  auth_utils.py  config.py  main.py  utils.py  workflow.py
src/configs/: configs.json
src/prompts/: A01_BAC.md
