[project]
name = "pt-appsec-ml-joleal"
version = "0.0.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.1.1",
    "strands-agents-tools>=0.2.8",
    "strands-agents[ollama,openai]>=1.9.1",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "strands-agents-tools>=0.2.8",
    "strands-agents[ollama,openai]>=1.9.1",
]
notebook = [
    "jupyter>=1.1.1",
]
